--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 asgiref==3.8.1
+dj-database-url==0.5.0
 Django==4.2.15
 django-allauth==0.57.2
 django-countries==7.2.1
 django-crispy-forms==1.14.0
+gunicorn==23.0.0
 oauthlib==3.2.2
 pillow==10.4.0
+psycopg2==2.9.9
 PyJWT==2.9.0
 python3-openid==3.2.0
 requests-oauthlib==2.0.0
